# android-wired

./: .gitignore  Cargo.toml  README.md  board.md  build.sh  devBuild.sh
.circleci/: config.yml
android/: build.gradle  dev_fruit_androiddemo_MainActivityKt.h
android/app/: build.gradle
android/app/src/androidTest/java/dev/fruit/androiddemo/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/fruit/androiddemo/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/test/java/dev/fruit/androiddemo/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
examples/: demo.rs
src/: android_executor.rs  app.rs  helpers.rs  lib.rs  slides.rs  ui_tree.rs
src/bindings/: callback.rs  mod.rs  view_helpers.rs
src/bindings/android/: callback.rs  mod.rs  views.rs
src/bindings/android/views/: button.rs  mod.rs
src/bindings/test/: mod.rs
src/style/: mod.rs
