[package]
name = "android-wired"
version = "0.1.0"
authors = ["Marco Munizaga <marco@marcopolo.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-signals = "0.3.7"
futures-preview = "=0.3.0-alpha.18"
futures-timer = "0.3.0"
discard = "1.0.4"
jni = { version = "0.13.0", default-features = false }
log = "0.4.6"
simple_logger = "1.3.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8"

[patch.crates-io]
futures-signals = { path = "../futures-signals" }

[profile.release]
lto = true

[lib]
name = "rust"
crate-type = ["cdylib"]